# rustodoist-rest2

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: color.rs  err.rs  general.rs  lib.rs  main.rs
src/comments/: mod.rs
src/comments/structs/: attachment.rs  comment.rs  mod.rs
src/labels/: mod.rs
src/labels/structs/: label.rs  mod.rs  new_label.rs  update_label.rs
src/projects/: mod.rs  view_style.rs
src/projects/structs/: mod.rs  new_project.rs  project.rs  update_project.rs  view_style.rs
src/sections/: mod.rs
src/sections/structs/: mod.rs  new_section.rs  section.rs
src/tasks/: mod.rs
src/tasks/structs/: due.rs  duration.rs  mod.rs  new_task.rs  task.rs  update_task.rs
