[package]
name = "rustodoist_rest2"
version = "0.0.2"
edition = "2021"
license = "AGPL-3.0-only"
description = "Wrapper around the Todoist REST v2 API"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {  version = "0.11.22", features = ["blocking", "json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
uuid = { version = "1.4.1", features = ["v4"] }
